<resources>
    <string name="app_name">Morse</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="morse_speed">Morse Speed</string>
    <string name="morse_speed_summary">Define the speed of the morse pulse</string>
    <string name="flashlight_switch">Flashlight</string>
    <string name="flashlight_switch_summary">Enable or disable flashlight</string>
    <string name="ultrasounds_switch">Morse Sounds</string>
    <string name="ultrasounds_switch_summary">Enable or disable morse sounds communication</string>
    <string name="soundStringKey">sounds</string>
    <string name="flashlightStringKey">flashlight</string>
    <string name="morsePulseSpeed">morsePulseSpeed</string>
    <string name="send_message_btn">Display Message</string>
    <string name="share_message_btn">Share Message</string>
    <string name="insert_text_here_and_press_send">Insert Text Here and Press Send</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Settings</item>
        <item >About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_settings_white_36px</item>
        <item>@drawable/ic_info_outline_white_36px</item>
    </array>
</resources>
